--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "## 👇 WATCH THIS FIRST 👇 ## https://tinyurl.com/customizeReactPortfolio",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maderinto/react-portfolio.git"
+  },
+  "author": "M Aderinto",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/maderinto/react-portfolio/issues"
+  },
+  "homepage": "https://github.com/maderinto/react-portfolio#readme"
 }
